# Research-Claw

./: .gitattributes  .gitignore  Dockerfile  README.en.md  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.2.md  RELEASE_v0.5.1.md  RELEASE_v0.5.3.md  RELEASE_v0.5.5.md  RELEASE_v0.5.7.md  RELEASE_v0.7.0.md  RELEASE_v0.7.1.md  WINDOWS_INSTALL.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
config/: openclaw.example.json  openclaw.json  openclaw.json.prefix-2026-06-09T0743
dashboard/: package.json  test-image-routing.mjs  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  frappe-gantt.d.ts  main.tsx  version.ts  vite-env.d.ts
docs/: 00-reference-map.md  01-interaction-design.md  02-engineering-architecture.md  04-prompt-design-framework.md  CHANGELOG.md  WINDOWS_INSTALL.md  functional-test-spec.md  knowledge-graph-plugin.md  memory-demo-readme.md  memory-plugin-design.md  skill-workshop-rc.md
docs/bugFix/: 01-ISSUE_corepack_keyid_summary.md  02-ISSUE_settings_model_revert.md  03-ISSUE_config_save_restart_race.md  04-ISSUE_dashboard_parity_test_drift.md
docs/engineering/: architecture.md  install-startup.md  interaction-design.md  plugin-integration.md  prompt-architecture.md  qa-test-spec.md  skill-workshop.md
docs/modules/: 03c-workspace-git-tracking.md  03d-message-card-protocol.md  03e-dashboard-ui.md  03f-research-claw-core-plugin.md
docs/self/: behaviors.md  capabilities.md  identity.md
docs/sop/: 01-dashboard-dev-sop.md  02-modules-dev-sop.md  03-plugin-integration-sop.md  04-prompt-behavior-sop.md  CHANGELOG.md  DOCKER-SCIENTIFIC-ENV.md  TOOL-SCHEMA-SOP.md
extensions/dual-model-supervisor/: index.ts  openclaw.plugin.json  package.json  supervisor-reviewer-providers.ts  tsconfig.json
extensions/openclaw-weixin/: openclaw.plugin.json
extensions/research-claw-core/: index.ts  openclaw.plugin.json  package.json
extensions/wentor-connect/: index.ts  openclaw.plugin.json  package.json
mcps/cn-academic-search-mcp/: LICENSE  NOTICE  README.md  pyproject.toml
mcps/cn-academic-search-mcp/docs/: setup-cnki.md  setup-cqvip.md  setup-wanfang.md
mcps/cn-academic-search-mcp/examples/: claude_desktop_config.json
mcps/cn-academic-search-mcp/src/cn_academic_search_mcp/: __init__.py  __main__.py  exceptions.py  models.py  registry.py  server.py
mcps/cn-academic-search-mcp/src/cn_academic_search_mcp/providers/: __init__.py  base.py  cnki.py  cqvip.py  mock.py  wanfang.py
mcps/cn-academic-search-mcp/tests/: conftest.py  test_mock_provider.py  test_registry_fallback.py  test_server.py  test_skeleton_providers_raise.py
mcps/econ-image-mcp/: LICENSE  NOTICE  README.md  pyproject.toml
mcps/econ-image-mcp/docs/: setup-dalle.md  setup-flux.md  setup-ideogram.md  setup-imagen.md  setup-recraft.md
mcps/econ-image-mcp/examples/: claude_desktop_config.json
mcps/econ-image-mcp/src/econ_image_mcp/: __init__.py  __main__.py  exceptions.py  models.py  registry.py  server.py
mcps/econ-image-mcp/src/econ_image_mcp/prompts/: __init__.py  library.py  templates.json
mcps/econ-image-mcp/src/econ_image_mcp/providers/: __init__.py  base.py  dalle.py  flux.py  ideogram.py  imagen.py  mock.py  recraft.py
mcps/econ-image-mcp/tests/: conftest.py  test_dalle_provider.py  test_mock_provider.py  test_prompt_library.py  test_registry_fallback.py  test_server.py  test_skeleton_providers.py
mcps/nsfc-mcp/: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
mcps/nsfc-mcp/examples/: claude_desktop_config.json
mcps/nsfc-mcp/src/nsfc_mcp/: __init__.py  __main__.py  client.py  exceptions.py  models.py  server.py
mcps/nsfc-mcp/tests/: conftest.py  test_client.py  test_server.py
mcps/nsfc-mcp/tests/fixtures/: sample_response.json
mcps/wind-cn-mcp/: .gitignore  NOTICE  README.md  pyproject.toml
mcps/wind-cn-mcp/docs/: setup-choice.md  setup-ifind.md  setup-tushare.md  setup-wind.md
mcps/wind-cn-mcp/examples/: claude_desktop_config.json
mcps/wind-cn-mcp/src/wind_cn_mcp/: __init__.py  __main__.py  exceptions.py  models.py  registry.py  server.py
mcps/wind-cn-mcp/src/wind_cn_mcp/providers/: __init__.py  base.py  choice.py  ifind.py  mock.py  tushare.py  wind.py
mcps/wind-cn-mcp/tests/: conftest.py  test_mock_provider.py  test_registry_fallback.py  test_server.py  test_skeleton_providers.py  test_tushare_provider.py
patches/: openclaw@2026.3.13.patch  openclaw@2026.3.8.patch  openclaw@2026.6.1.patch
scripts/: apply-branding.sh  docker-entrypoint.sh  e2e-test.mjs  ensure-config.cjs  health.sh  init-memory-demo.sh  install.sh  migrate-rc-data-dir.cjs  minimax-oauth-proxy.mjs  run.sh  seed-mock-tasks.sh  setup-plotting-env.sh  setup.sh  sync-global-config.cjs  update-research-claw.ps1  update-research-claw.sh
skills/academic-deep-research/: SKILL.md
skills/academic-writing/: SKILL.md
skills/causal-inference-cn/: NOTICE  README.md  SKILL.md
skills/channels-guide/: SKILL.md
skills/citation-styles/: SKILL.md
skills/coding-sop/: SKILL.md
skills/csmar-cleaning-cn/: NOTICE  README.md  SKILL.md
skills/document-converter/: SKILL.md
skills/econ-charts-cn/: LICENSE  NOTICE  README.md  SKILL.md
skills/econ-tables-cn/: LICENSE  NOTICE  README.md  SKILL.md
test/: docker-dbpath-override.test.ts  ppt-service.test.ts  tool-schema-compliance.test.ts
tests/: docker-integration-issue38.ts
workspace/: .gitignore  AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md.example
(+534 files in other folders)
