[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cn-academic-search-mcp"
version = "0.1.0"
description = "Unified MCP server for Chinese academic database search (Wanfang / CqVip / CNKI) with pluggable Provider abstraction."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Research-Claw Contributors" },
]
keywords = ["mcp", "academic-search", "chinese-academic", "wanfang", "cqvip", "cnki"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cn-academic-search-mcp = "cn_academic_search_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cn_academic_search_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
