[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econ-image-mcp"
version = "0.1.0"
description = "Multi-provider image-generation MCP for economics & management research (政策传导 / 博弈论 / 概念图 / Graphical Abstract / 海报)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Research-Claw Contributors" },
]
keywords = [
    "mcp",
    "image-generation",
    "dalle",
    "flux",
    "imagen",
    "ideogram",
    "recraft",
    "economics",
    "management",
    "academic-figures",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
econ-image-mcp = "econ_image_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/econ_image_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/econ_image_mcp/prompts/templates.json" = "econ_image_mcp/prompts/templates.json"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
