[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wind-cn-mcp"
version = "0.1.0"
description = "Unified MCP adapter for Chinese financial data terminals (Wind / iFinD / Choice / Tushare)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Research-Claw Contributors" },
]
keywords = ["mcp", "wind", "tushare", "ifind", "choice", "finance", "china"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
wind-cn-mcp = "wind_cn_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wind_cn_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
